[metadata]
name = ray-on-aml
version = 0.0.8
author = James Nguyen, Hyun Suk Shin
author_email = james.nguyen@microsoft.com,hyssh@microsoft.com
description = Turn AML cluster into Ray 
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/james-tn/ray-on-aml
project_urls =
    Bug Tracker = https://github.com/james-tn/ray-on-aml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    ray[tune]==1.9.2
    ray[serve]==1.9.2
    ray[rllib]==1.9.2
    pyarrow>= 5.0.0
    dask[complete]==2021.12.0
    adlfs==2021.10.0
    fsspec==2021.10.1
    xgboost_ray==0.1.6
    fastparquet==0.7.2
[options.packages.find]
where = src
