[metadata]
name = ray-on-aml
version = 0.2.5
author = James Nguyen, Hyun Suk Shin, Dawei Li
author_email = james.nguyen@microsoft.com,hyssh@microsoft.com, dawei.li@microsoft.com
description = Turn AML cluster into Ray 
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/microsoft/ray-on-aml
project_urls =
    Bug Tracker = https://github.com/microsoft/ray-on-aml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
[options.packages.find]
where = src
